<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fm_slide_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="opswat.com.flow.enroll.EnrollActivity">

    <View
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <android.support.v7.widget.Toolbar
        style="@style/TitleStyle.StatusBar"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/enroll_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enroll_your_device"
                android:textColor="@color/white"
                android:textSize="@dimen/title_detail_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enroll_description"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration_code"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_title_detail_text_size" />

            <EditText
                android:id="@+id/enroll_et_registration_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:inputType="textCapCharacters"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/enroll_tv_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/enroll_advanced"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/bottom_text_size" />

            <LinearLayout
                android:id="@+id/enroll_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/group_identity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sub_title_detail_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/optional_input"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sub_header_text_size" />

                </LinearLayout>

                <EditText
                    android:id="@+id/enroll_et_group_identity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:hint="@string/group_identity_placeholder"
                    android:inputType="text"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:textAppearance="@style/Regular"
                    android:textSize="@dimen/header_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/server_address"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sub_title_detail_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/optional_input"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sub_header_text_size" />

                </LinearLayout>

                <EditText
                    android:id="@+id/enroll_et_server_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:hint="@string/server_address_placeholder"
                    android:inputType="text"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:textAppearance="@style/Regular"
                    android:textSize="@dimen/header_text_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/enroll_tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/enroll_invalid_reg_code"
                android:textColor="@color/color_non_compliant"
                android:textSize="@dimen/sub_header_text_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/enroll_btn_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_dark"
                android:text="@string/enroll_your_device"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/Regular"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/header_text_size" />

            <TextView
                android:id="@+id/enroll_tv_need_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/need_help"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/bottom_text_size" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
